<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.just.mypageproofsapplication.MainActivity"
    tools:showIn="@layout/activity_main">


    <ImageView
        app:srcCompat="@drawable/rss2"
        android:layout_marginTop="25dp"
        android:id="@+id/imageView7"
        android:layout_below="@+id/imageView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="@dimen/size30"
        android:layout_height="@dimen/size30"
        android:contentDescription="@string/rss" />

    <TextView
        android:text="@string/Sity_Kalamazy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_alignBottom="@+id/imageView9"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginBottom="14dp"
        android:textSize="@dimen/textViewSize"/>

    <TextView
        android:text="@string/FullInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textColor="?attr/colorPrimary"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:textSize="@dimen/textViewSize"/>

    <TextView
        android:text="@string/_82_746"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_alignTop="@+id/imageView7"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:textSize="@dimen/textViewSize"/>

    <Button
        android:text="@string/MessageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:textSize="@dimen/textViewSize"
        android:layout_above="@+id/imageView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/button"
        android:textColor="@android:color/background_light"
        android:backgroundTint="@color/colorPrimary"
        tools:targetApi="lollipop"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <ImageView
        app:srcCompat="@drawable/friends"
        android:id="@+id/imageView4"
        android:layout_width="@dimen/size30"
        android:layout_height="@dimen/size30"
        android:contentDescription="@string/friends"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/girl"
        android:id="@+id/imageView8"
        android:layout_below="@+id/button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/dikaprio"
        android:id="@+id/imageView6"
        android:layout_below="@+id/button"
        android:layout_toLeftOf="@+id/imageView12"
        android:layout_toStartOf="@+id/imageView12" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/cyker"
        android:id="@+id/imageView5"
        android:layout_below="@+id/button"
        android:layout_toLeftOf="@+id/imageView6"
        android:layout_toStartOf="@+id/imageView6" />

    <Button
        android:text="@string/InYourFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:textSize="@dimen/textViewSize"
        android:textColor="?attr/colorPrimary"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/cycle"
        android:id="@+id/imageView12"
        android:layout_alignTop="@+id/imageView11"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/cycle"
        android:id="@+id/imageView11"
        android:layout_below="@+id/button"
        android:layout_toRightOf="@+id/imageView5"
        android:layout_toEndOf="@+id/imageView5" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/cycle"
        android:id="@+id/imageView10"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/imageView5"
        android:layout_alignStart="@+id/imageView5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_512_53"
        android:textSize="@dimen/textViewSize"
        android:layout_alignBottom="@+id/imageView5"
        android:layout_toRightOf="@+id/imageView4"
        android:layout_toEndOf="@+id/imageView4"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp" />

    <ImageView
        app:srcCompat="@drawable/home"
        android:id="@+id/imageView9"
        android:layout_width="@dimen/size30"
        android:layout_height="@dimen/size30"
        android:contentDescription="@string/home"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/imageView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textSize="24sp"
        android:textColor="?attr/colorPrimary"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/imageView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
